fix shrinking issue on firefox

--- a/web_scripts/static/css/home.css
+++ b/web_scripts/static/css/home.css
@@ -13,6 +13,7 @@
 
 .banner-img {
     align-self: center;
+    flex-shrink: 0;
 }
 
 .banner-text {
